# tmux-chat

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  README.zh-TW.md  TASK.md  config.local.mk.sample  install.sh
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: CNAME  breaking-changes-flag-day-2026.md  deployment-host-agent.zh-TW.md  deployment-ios.zh-TW.md  deployment-push-server.zh-TW.md  deployment-three-systems.zh-TW.md  deployment-tmux-chatd.zh-TW.md  deployment-tmux.zh-TW.md  index.html  notification-blueprint.md  privacy.html  setup.html
docs/ja/: index.html  privacy.html  setup.html
fastlane/: Appfile  changelog.txt
host-agent/: Cargo.toml
host-agent/src/: config.rs  daemon.rs  legacy_bash.rs  main.rs  pairing.rs  paths.rs  service.rs  shell_notify.rs  tmux.rs
ios/Reattach/: Config.xcconfig.sample  ContentView.swift  Info.plist  ReattachApp.swift
ios/Reattach.xcodeproj/: project.pbxproj
ios/TmuxChat/: Config.xcconfig.sample  ContentView.swift  Info.plist  StoreKitConfiguration.storekit  TmuxChatApp.swift
ios/TmuxChat.xcodeproj/: project.pbxproj
ios/TmuxChatTests/: CapabilitiesContractTests.swift  (+5 more)
launchd/: com.allenneverland.cloudflared-reattach.plist  com.allenneverland.cloudflared-tmux-chat.plist  com.allenneverland.reattachd.plist  com.allenneverland.tmux-chatd.plist  com.kumabook.reattachd.plist
push-server/: Cargo.toml  Dockerfile
push-server/src/: api.rs  apns.rs  config.rs  db.rs  error.rs  main.rs  metrics.rs  models.rs  state.rs  token.rs
reattachd/: Cargo.toml
tmux-chatd/: Cargo.toml
(+86 files in other folders)
